--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  line-height: 1.5;
+  line-height: 0.25;
   background: #fff;
   color: #111;
   font-family: "Special Gothic", sans-serif;
@@ -48,6 +48,29 @@ a:hover {
   color: #515151
 }
 
+.nav-column {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.logo img {
+  width: 100%;
+  max-width: 200px; /* adjust to taste */
+  box-align: center;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  padding-left: 2em;
+}
+
+.nav-links a {
+  font-size: 1rem;
+  box-align: center;
+}
 
 
 /*Grids*/
