--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-/*General Setup*/
-
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -56,7 +54,7 @@ a:hover {
 
 .logo img {
   width: 100%;
-  max-width: 200px; /* adjust to taste */
+  max-width: 200px;
   box-align: center;
 }
 
@@ -118,6 +116,7 @@ a:hover {
   width: 100%; 
   height: auto; 
 } 
+
 
 
 /*Photo Column*/
