--- a/css/styles.css
+++ b/css/styles.css
@@ -171,15 +171,6 @@ a:hover {
   padding: 2rem 1rem;
 }
 
-.module-title {
-  margin-bottom: 0.5rem;
-}
-
-.module-caption {
-  margin-bottom: 1.5rem;
-  max-width: 700px;
-}
-
 .image-row {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -190,6 +181,7 @@ a:hover {
   width: 100%;
   height: auto;
   display: block;
+  padding-top: .5em;
 }
 
 /* Mobile stack */
