--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-right: 3em;
 }
 
 .logo img {
@@ -223,7 +224,9 @@ a:hover {
   padding-top: .5em;
 }
 
-
+.menu-close {
+  display: none;
+}
 
 
 
@@ -231,6 +234,10 @@ a:hover {
 /* Mobile and Tablet*/
 @media (max-width: 700px) {
 
+  html {
+    font-size: 90%;
+  }
+  
   /*Nav*/
 
   .nav-column {
@@ -239,7 +246,7 @@ a:hover {
     left: 0;
     right: 0;
     height: 72px;
-    padding: 0 1rem;
+    padding: 0 0rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -248,7 +255,6 @@ a:hover {
     z-index: 1100;
     transform: none;
   }
-
 
   .logo img {
     max-width: 72px;
@@ -342,19 +348,6 @@ a:hover {
     z-index: 1100;
   }
 
-  .menu-close {
-    position: absolute;
-    top: 1.25rem;
-    right: 1rem;
-    background: none;
-    border: none;
-    padding: 0;
-    font-size: 2rem;
-    line-height: 1;
-    color: #111;
-    cursor: pointer;
-  }
-
   .grid {
     padding-top: 0.75rem;
   }
@@ -384,4 +377,24 @@ a:hover {
     padding-top: 1rem;
   }
 
+  .text-wrap {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .text-wrap img {
+    order: 2;            
+    float: none;         
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    margin: 1.5rem auto 0;
+  }
+
+  .secondary-wrap {
+    max-width: 150px;
+  }
 }
