--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,21 @@ a:hover {
   }
 }
 
+.video-container { 
+  position: relative; 
+  padding-bottom: 56.25%; /* 16:9 ratio */ 
+  height: 0; 
+  overflow: hidden; 
+} 
+
+.video-container iframe { 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  border: 6px; 
+}
 
 .image-module {
   max-width: 1200px;
