--- a/css/styles.css
+++ b/css/styles.css
@@ -101,9 +101,7 @@ a:hover {
 
 
 
-
-
-/*Grids*/
+/*Grids and Grid Content*/
 .grid {
   display: block;
   grid-template-columns: 1fr;
@@ -123,7 +121,7 @@ a:hover {
   min-height: calc(100vh - 4rem);
   display: grid;
   place-items: center;
-  padding-left: 2em;
+  padding-left: 2em; 
 }
 
 .links {
@@ -308,8 +306,6 @@ a:hover {
 
 
 
-
-
 /* Mobile and Tablet*/
 @media (max-width: 700px) {
 
@@ -375,22 +371,16 @@ a:hover {
     top: 72px;
     left: 0;
     right: 0;
-
     height: calc(100vh - 72px);
-
     background: #fff;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-
     gap: 2rem;
     padding: 20vh 0 0 0;
     margin: 0;
-
     text-align: center;
-
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
@@ -442,7 +432,7 @@ a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 90% 20%;
+    object-position: 55% 20%;
   }
 
   .image-row {
@@ -481,8 +471,8 @@ a:hover {
 }
 
 
-/*Footer*/
 
+/*Footer*/
 .site-footer {
   width: 100%;
   padding: 2rem 1rem;
@@ -502,4 +492,3 @@ a:hover {
     padding: 1.5rem 1rem;
   }
 }
-
