--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,31 @@ a:hover {
   line-height: 2;
 }
 
+.nav-links-2 {
+  width: 100%;
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: row;    
+  gap: 1rem;              
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75rem;
+}
+
+.nav-links-2 a {
+  margin: 0;
+  line-height: 1;
+  display: inline-block;
+  color: #515151;
+}
+
+.nav-links-2 p {
+  margin: 0;
+  line-height: 1;
+  display: inline-block;
+}
+
+
 
 
 /*Grids and Grid Content*/
