--- a/css/styles.css
+++ b/css/styles.css
@@ -414,6 +414,7 @@ a:hover {
     pointer-events: none;
     transition: opacity 0.3s ease;
     z-index: 1000;
+    background: #F8F3F2;
   }
 
   .nav-column.open .nav-links {
