--- a/css/styles.css
+++ b/css/styles.css
@@ -373,6 +373,7 @@ a:hover {
     height: 20px;
     position: relative;
     cursor: pointer;
+    z-index: 1200;
   }
 
   .nav-toggle span {
@@ -414,6 +415,7 @@ a:hover {
     pointer-events: none;
     transition: opacity 0.3s ease;
     z-index: 1000;
+    color: #F8F3F2;
   }
 
   .nav-column.open .nav-links {
@@ -434,11 +436,6 @@ a:hover {
 
   .nav-links p {
     margin: 0;
-  }
-
-  .nav-column {
-    position: relative;
-    z-index: 1100;
   }
 
   .grid {
