--- a/css/styles.css
+++ b/css/styles.css
@@ -350,21 +350,24 @@ a:hover {
     top: 0;
     left: 0;
     right: 0;
-    height: 72px;
-    padding: 0 0rem;
+    height: 120px;
+    padding: 0 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
     z-index: 1100;
     transform: none;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background: #F8F3F2;
   }
 
   .logo img {
     max-width: 120px;
     height: auto;
     display: block;
-    padding-left: 2rem;
+    padding-left: 1.5rem;
   }
 
   .nav-toggle {
@@ -443,7 +446,7 @@ a:hover {
   }
 
   .image-center {
-    aspect-ratio: 4 / 5;
+    aspect-ratio: 11 / 17;
     width: 100%;
     max-width: 100%;
     overflow: hidden;
@@ -454,8 +457,8 @@ a:hover {
   }
 
   .image-center img {
-    width: 100%;
-    height: 80%;
+    width: 90%;
+    height: 90%;
     object-fit: cover;
     object-position: 55% 20%;
   }
