--- a/css/styles.css
+++ b/css/styles.css
@@ -350,8 +350,8 @@ a:hover {
     top: 0;
     left: 0;
     right: 0;
-    height: 120px;
-    padding: 0 2rem;
+    height: 90px;
+    padding: 0 3rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -454,6 +454,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     padding: 0;
+    margin-top: 3rem;
   }
 
   .image-center img {
